--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "react-devtools": "react-devtools",
     "eject": "expo eject"
   },
   "dependencies": {
@@ -30,7 +31,8 @@
     "redux-logger": "3.0.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "react-devtools": "^4.13.5"
   },
   "private": true
 }
