--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "redux": "4.0.5",
     "react-redux": "7.2.0",
     "redux-thunk": "2.3.0",
-    "redux-logger": "3.0.6"
+    "redux-logger": "3.0.6",
+    "@react-native-community/datetimepicker": "3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
