--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "expo": "~41.0.1",
     "expo-constants": "~10.1.3",
+    "expo-notifications": "^0.3.3",
     "expo-secure-store": "^10.2.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
