--- a/app.json
+++ b/app.json
@@ -17,7 +17,8 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "bundleIdentifier": "co.nucamp.nucampsite.student",
+      "buildNumber": "1.0.0"
     },
     "android": {
       "adaptiveIcon": {
