--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "3.2.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "^5.9.10",
     "expo": "~41.0.1",
+    "expo-camera": "^11.2.1",
     "expo-constants": "~10.1.3",
+    "expo-image-picker": "^8.4.0",
     "expo-mail-composer": "^10.2.2",
     "expo-notifications": "^0.3.3",
+    "expo-permissions": "^9.3.0",
     "expo-secure-store": "^10.2.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
@@ -27,10 +31,12 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-swipe-list-view": "^3.2.9",
+    "react-native-unimodules": "^0.12.0",
     "react-native-web": "^0.16.5",
     "react-navigation": "4",
     "react-navigation-drawer": "^2.7.1",
     "react-navigation-stack": "^1.10.3",
+    "react-navigation-tabs": "^2.11.1",
     "react-redux": "7.2.0",
     "redux": "4.0.5",
     "redux-logger": "3.0.6",
